--- a/FlaskWebProject1/templates/kowshik.html
+++ b/FlaskWebProject1/templates/kowshik.html
@@ -31,9 +31,9 @@
     <div class="container">
         <h1>{{ title }}</h1>
         <p>{{ message }}</p>
-        <p>This is a custom page created for the /kamran endpoint.</p>
+        <p>This is a custom page created for the /kowshik endpoint.</p>
         <p>Feel free to customize this content as needed!</p>
-        <p>This page was created by Kamran</p>
+        <p>This page was created by Kowshik</p>
     </div>
 </body>
 </html>
